# contabilidad

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_purchases_causation.py  0003_puc_seed.py
backend/scripts/: generate_test_files.py  seed_puc.py
backend/src/: config.py  main.py
backend/src/application/dtos/: auth.py  client.py  mapping_rule.py  purchase_invoice.py  report.py
backend/src/application/use_cases/auth/: login.py  register.py
backend/src/domain/entities/: causation_entry.py  classification_history.py  client.py  cost_center.py  invoice_import_batch.py  mapping_rule.py  puc_account.py  report.py  supplier_invoice.py  tenant.py  user.py
backend/src/domain/ports/: accounting_system_port.py
backend/src/domain/repositories/: base.py  causation_entry_repository.py  classification_history_repository.py  client_repository.py  cost_center_repository.py  import_batch_repository.py  mapping_rule_repository.py  puc_account_repository.py  report_repository.py  supplier_invoice_repository.py  tenant_repository.py  user_repository.py
backend/src/domain/value_objects/: email.py
backend/src/infrastructure/accounting/: internal_accounting_system.py
backend/src/infrastructure/database/: connection.py  models.py
backend/src/infrastructure/purchases/: period_utils.py
backend/src/infrastructure/repositories/: causation_entry_repository.py  classification_history_repository.py  client_repository.py  cost_center_repository.py  import_batch_repository.py  mapping_rule_repository.py  puc_account_repository.py  report_repository.py  supplier_invoice_repository.py  tenant_repository.py  user_repository.py
backend/src/infrastructure/security/: jwt.py  password.py
backend/src/infrastructure/storage/: minio_service.py
backend/src/presentation/middleware/: auth.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_cost_center_repository.py  test_purchases_api.py
backend/tests/unit/: test_causation_entry.py  test_dian_cleaner.py  test_entities.py  test_period_utils.py  test_puc_seed.py  test_suggest_mapping.py
docs/: arquitectura-aws.md
(+58 files in other folders)
