[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "contaflow-backend"
version = "0.1.0"
description = "ContaFlow - SaaS de informes contables"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    "reportlab>=4.2.0",
    "plotly>=5.24.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["B008", "E501", "UP017", "UP035", "UP042", "UP046"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["TCH001", "TCH002", "TCH003"]
"src/presentation/**/*.py" = ["TCH001", "TCH002", "I001"]
"src/infrastructure/reporting/**/*.py" = ["SIM", "N", "I001", "F841", "B905", "TCH001", "TCH002", "TCH003"]
"src/infrastructure/repositories/**/*.py" = ["TCH002", "TCH003"]
"src/infrastructure/security/**/*.py" = ["TCH001", "I001"]
"src/application/**/*.py" = ["TCH001", "TCH002", "TCH003"]
"src/domain/**/*.py" = ["TCH001", "TCH002", "TCH003"]
"src/application/use_cases/reports/generate_report.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]
